--- a/client/src/Application/Users/Users.css
+++ b/client/src/Application/Users/Users.css
@@ -1,3 +1,6 @@
+.users > h2.info {
+  text-align: center;
+}
 .users-table {
   border-collapse: collapse;
   margin: 25px auto;
@@ -8,7 +11,7 @@
   box-shadow: 0px 10px 30px 5px rgba(0,0,0,0.15);
 }
 .users-table tr td {
-  width: 30%;
+  width: 15%;
 }
 .users-table thead tr {
   border-bottom: 1px solid rgb(152, 230, 152);
