--- a/client/src/Application/components/Navbar.css
+++ b/client/src/Application/components/Navbar.css
@@ -10,4 +10,9 @@ div#root > div.navbar > nav {
 }
 div#root > div.navbar > nav > a {
   font-size: 24px;
+  text-decoration-color: rgb(0, 102, 204);
+  color:rgb(0, 102, 204);
+}
+div#root > div.navbar > nav > a:hover {
+  cursor: pointer;
 }
